--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "library",
   "description": "Easy - Moamalat Lightbox integration for Laravel.",
   "require": {
-    "laravel/framework": "^7.25|^9.0"
+    "laravel/framework": "^7.25|^8.0|^9.0"
   },
   "license": "MIT",
   "autoload": {
