--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   ],
   "minimum-stability": "dev",
   "require-dev": {
-    "orchestra/testbench": "^5"
+    "orchestra/testbench": "^5",
+    "nunomaduro/larastan": "1.0"
   }
 }
