--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,14 +15,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ["^7.2.5"]
+        php-versions: ["7.2.5","7.2","7.4"]
 
     steps:
       - name: Setup PHP, with composer and extensions
-        uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, dom, fileinfo, mysql
+          extensions: mbstring, dom, fileinfo
           coverage: xdebug #optional
 
       - name: Checkout
@@ -34,5 +34,5 @@ jobs:
       - name: Static Analysis via PHPStan
         run: ./vendor/bin/phpstan analyse --memory-limit=2G
 
-      - name: Automation Testing via PHPUnit
+      - name:  Test via PHPUnit
         run: ./vendor/bin/phpunit
