--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ["7.3","7.4"]
+        php-versions: ["7.4"]
 
     steps:
       - name: Setup PHP, with composer and extensions
