--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
   "minimum-stability": "dev",
   "require-dev": {
     "orchestra/testbench": "^5",
-    "nunomaduro/larastan": "1.0"
+    "nunomaduro/larastan": "1.0",
+    "guzzlehttp/guzzle": "7.5.x-dev"
   }
 }
