--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ["7.4"]
+        php-versions: ["7.4", "8"]
 
     steps:
       - name: Setup PHP, with composer and extensions
@@ -27,7 +27,7 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Show php version
         run: php -v
 
@@ -35,7 +35,7 @@ jobs:
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Static Analysis via PHPStan
-        run: ./vendor/bin/phpstan analyse --memory-limit=2G
+        run: composer analyse
 
       - name:  Test via PHPUnit
-        run: ./vendor/bin/phpunit
+        run: composer test
