--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "library",
   "description": "Easy - Moamalat Lightbox integration for Laravel.",
   "require": {
-    "laravel/framework": "^8.0"
+    "laravel/framework": "^9.0"
   },
   "license": "MIT",
   "autoload": {
@@ -35,10 +35,10 @@
   ],
   "minimum-stability": "dev",
   "require-dev": {
-    "orchestra/testbench": "^6",
-    "nunomaduro/larastan": "1.0",
+    "orchestra/testbench": "^7",
+    "nunomaduro/larastan": "2.0",
     "guzzlehttp/guzzle": "7.5.x-dev",
-    "laravel/legacy-factories": "1.x-dev",
-    "nunomaduro/collision": "^5.10"
+    "nunomaduro/collision": "^6.0",
+    "laravel/legacy-factories": "1.x-dev"
   }
 }
